--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,9 @@
+version.flyway=8.2.1
+version.h2=1.4.200
 version.jackson=2.13.0
 version.junit=5.8.1
 version.log4j=2.14.1
 version.mockito=4.0.0
 version.slf4j=2.0.0-alpha5
+version.spring.data=2.2.5
 version.spring.framework=5.3.10
