--- a/gradle.properties
+++ b/gradle.properties
@@ -4,6 +4,7 @@ version.jackson=2.13.0
 version.junit=5.8.1
 version.log4j=2.14.1
 version.mockito=4.0.0
+version.servlet=3.0.1
 version.slf4j=2.0.0-alpha5
 version.spring.data=2.2.5
 version.spring.framework=5.3.10
